[tool.poetry]
name = "starlette-session"
version = "0.1.1"
description = "A library for backend side session with starlette"
authors = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
maintainers = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/auredentan/starlette-sessionhttps://github.com/auredentan/starlette-session"
repository = "https://github.com/auredentan/starlette-sessionhttps://github.com/auredentan/starlette-session"

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.13.8"
redis = {version = "^3.5.3", optional = true}
itsdangerous = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^19.10b0"
fakeredis = "^1.4.3"
requests = "^2.24.0"
pytest-mock = "^3.3.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''