[tool.poetry]
name = "starlette-session"
version = "0.4.1"
description = "A library for backend side session with starlette"
authors = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
maintainers = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/auredentan/starlette-sessionhttps://github.com/auredentan/starlette-session"
repository = "https://github.com/auredentan/starlette-sessionhttps://github.com/auredentan/starlette-session"

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.6.1"
starlette = "^0.13.8"
itsdangerous = "^1.1.0"
aioredis = {version = "^1.3.1", optional = true}
pymemcache = {version = "^3.3.0", optional = true}
redis = {version = "^3.5.3", optional = true}

[tool.poetry.extras]
redis = ["redis"]
pymemcache = ["pymemcache"]
aioredis = ["aioredis"]

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-mock = "^3.3.0"
pytest-cov = "^2.10.1"
black = "^19.10b0"
requests = "^2.24.0"
failprint = "^0.3.0"
mkdocstrings = "^0.13.0"
mkdocs-material = "^5.5.9"
git-changelog = "^0.4.0"
isort = "^5.4.2"
fakeredis = "^1.4.3"
pytest-asyncio = "^0.14.0"
pymemcache = "^3.3.0"
mypy = "^0.782"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

