[tool.poetry]
name = "starlette-session"
version = "0.4.2"
description = "A library for backend side session with starlette"
authors = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
maintainers = ["Aurélien Dentan <aurelien.dentan@gmail.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/auredentan/starlette-session"
repository = "https://github.com/auredentan/starlette-session"

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "<4,>=3.7"
starlette = "<1"
itsdangerous = ">=1.1.0"
aioredis = {version = ">=1.3.1", optional = true}
pymemcache = {version = ">=3.3.0", optional = true}
redis = {version = ">=3.5.3", optional = true}

[tool.poetry.extras]
redis = ["redis"]
pymemcache = ["pymemcache"]
aioredis = ["aioredis"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^22.8.0"
requests = ">=2.24.0"
git-changelog = "^0.6.0"
isort = "^5.10.1"
fakeredis = "^1.10.0"
pytest-asyncio = "^0.20.1"
pymemcache = "^3.3.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
httpx = "^0.23.0"
mkdocs-material = "^8.5.7"
mkdocstrings-python = "^0.7.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

